관리자 모드 추가