@@ -2,10 +2,12 @@ package com.stylemate.config.security;
 
 import com.stylemate.model.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class UserDetailsImpl implements UserDetails {
 
@@ -15,24 +17,24 @@ public class UserDetailsImpl implements UserDetails {
         this.user = user;
     }
 
-    // 사용자 객체 반환
     public User getUser() {
         return this.user;
     }
 
-    // 닉네임 getter
     public String getNickname() {
         return user != null ? user.getNickname() : null;
     }
 
-    // ID getter
     public Long getId() {
         return user != null ? user.getId() : null;
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // 추후 역할(Role) 추가 가능
+        if (user == null || user.getRole() == null) {
+            return Collections.emptyList();
+        }
+        return List.of(new SimpleGrantedAuthority(user.getRole()));
     }
 
     @Override
